# extracteroid-ngp

./: .gitattributes  .gitignore  Cargo.toml  build.rs  compile_shaders.bat  compile_shaders.sh  flake.nix  ngp  ngp.cmd  start.sh
glsl/: crt.frag  crt.glsl  crt.vert  mesh3d.frag  mesh3d.glsl  mesh3d.vert  static_noise.frag  static_noise.glsl  static_noise.vert
src/: lib.rs
src/shaders/: crt.rs  mesh3d.rs  mod.rs  static_noise.rs
